--- a/views/size.erb
+++ b/views/size.erb
@@ -7,9 +7,11 @@
     <input name="boardsize" type="radio" value="24" /> 24 x 24 <br />
     <input name="boardsize" type="radio" value="36" /> 36 x 36 <br />
     </br> 
-    <button type="submit" value="Submit">Submit</button></form> </div>Test
+    <button type="submit" value="Submit">Submit</button></form> </div>
+    
 <div align="center" class="content">
-<img src="images/grid.png">
+<img src="images/grid_12.png">
+
 </div>
     <div class="footer">
      <center>   <p> <font color="#000"> App by :</font> Twfdisturbed </p></center></div>       
