--- a/views/contact.erb
+++ b/views/contact.erb
@@ -6,28 +6,28 @@
     <ul style="list-style-type:square;">
     <left>
    <br> 
-<a href="http://www.twitter.com/twfdisturbed">Twitter</a>
+<a target=_blank href="http://www.twitter.com/twfdisturbed">Twitter</a>
 <br>
-<a href="http://www.youtube.com/twfdisturbed">Youtube</a>
+<a target=_blank  href="http://www.youtube.com/twfdisturbed">Youtube</a>
 <br>
-<a href="https://www.facebook.com/twfdisturbed">Facebook</a>
+<a target=_blank  href="https://www.facebook.com/twfdisturbed">Facebook</a>
 <br>
-<a href="https://www.instagram.com/twfdisturbed">instagram</a>
+<a target=_blank  href="https://www.instagram.com/twfdisturbed">instagram</a>
 <br>
-<a href="mailto:battle_ship_faq@mail.com">E-mail</a>
+<a target=_blank  href="mailto:battle_ship_faq@mail.com">E-mail</a>
     </left>
  </div>
 
     <div align="center" class="content">
    <center> <h2><font color="#333"> ..::Social Media::.. <hr color="#333" /> </font></h2></center>
    <br> 
-<a href="http://www.twitter.com/twfdisturbed"><img src =images/twitter.png></a>
+<a target=_blank  href="http://www.twitter.com/twfdisturbed"><img src =images/twitter.png></a>
 
-<a href="http://www.youtube.com/twfdisturbed"><img src=images/youtube.png></a>
+<a target=_blank  href="http://www.youtube.com/twfdisturbed"><img src=images/youtube.png></a>
 
-<a href="https://www.facebook.com/twfdisturbed"><img src=images/facebook.png></a>
+<a target=_blank  href="https://www.facebook.com/twfdisturbed"><img src=images/facebook.png></a>
 
-<a href="https://www.instagram.com/twfdisturbed"><img src=images/instagram.png></a>
+<a target=_blank  href="https://www.instagram.com/twfdisturbed"><img src=images/instagram.png></a>
     </div>
 
     <div class="footer">
