--- a/views/faq.erb
+++ b/views/faq.erb
@@ -19,7 +19,7 @@
    <center> <h2><font color="#333"> ..::Sugguest a question::.. <hr color="#333" /> </font></h2></center>
    <br> 
    Ask your Own Question that might be added to the list <br>
-    <a href="mailto:battle_ship_faq@mail.com"><img src="images/email_thumb.png"> <br>E-mail us</a> 
+    <a target=_blank  href="mailto:battle_ship_faq@mail.com"><img src="images/email_thumb.png"> <br>E-mail us</a> 
     </div>
 
     <div class="footer">
