--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Battle Ship !!</title>
 </head>
-<body bgcolor="grey">
+<body bgcolor="grey" onload="goaway()">
         <nav width=100% align="center">
   
                 <div class="dropdown">
@@ -29,19 +29,19 @@
              <div class="dropdown">
                <button class="dropbtn"><b>Awesome Websites</b></button>
                <div class="dropdown-content">
-                     <a href="http://www.disturbedmedia.com">Disturbedmedia.com</a>
-                     <a href="http://www.minedminds.org/">Mined Minds</a>
-                     <a href="https://www.w3schools.com/">W3schools.com</a>
+                     <a target=_blank  href="http://www.disturbedmedia.com">Disturbedmedia.com</a>
+                     <a target=_blank  href="http://www.minedminds.org/">Mined Minds</a>
+                     <a target=_blank  href="https://www.w3schools.com/">W3schools.com</a>
                </div>
              </div>
              <div class="dropdown">
                <button class="dropbtn"><b>Social Media</b></button>
                <div class="dropdown-content">
-                     <a href="http://www.twitter.com/twfdisturbed">Twitter @twfdisturbed</a>
-                     <a href="https://www.instagram.com/twfdisturbed">Instagram @twfdisturbed</a>
-                     <a href="http://www.youtube.com/twfdisturbed">Youtube</a>
-                     <a href="http://www.facebook.com/twfdisturbed">Facebook</a>
-                     <a href="mailto:battle_ship_faq@mail.com">E-Mail</a>
+                     <a target=_blank  href="http://www.twitter.com/twfdisturbed">Twitter @twfdisturbed</a>
+                     <a target=_blank  href="https://www.instagram.com/twfdisturbed">Instagram @twfdisturbed</a>
+                     <a target=_blank  href="http://www.youtube.com/twfdisturbed">Youtube</a>
+                     <a target=_blank  href="http://www.facebook.com/twfdisturbed">Facebook</a>
+                     <a target=_blank  href="mailto:battle_ship_faq@mail.com">E-Mail</a>
                </div>
                </div>
                  </nav>
