Update to deploy

--- a/views/game.erb
+++ b/views/game.erb
@@ -18,7 +18,7 @@
                     <option id="pos" value="h">Horizontal</option>
                     <option id= "pos" value="v">Vertical</option>
                 </select>
-                <input type='text' name='ship_num' value='<%=ship_num%>' id="value_s">
+                <input type='hidden' name='ship_num' value='<%=ship_num%>' id="value_s">
                 <font color="#000"><h1><%=err%></h1></font> 
                 </div>
               
