--- a/views/game.erb
+++ b/views/game.erb
@@ -15,9 +15,10 @@
                 <div id="direction">
                 <font id="HV" color="#000"><h3>Horizontal or Vertical</h3></font>
                 <select id="pos" name="pos">
-                    <option id="pos" value="h">Horizontal</option>
+                    <option id="pos" value="horizontal">Horizontal</option>
                     <option id= "pos" value="v">Vertical</option>
                 </select>
+                
                 <input type='hidden' name='ship_num' value='<%=ship_num%>' id="value_s">
                 <font color="#000"><h1><%=err%></h1></font> 
                 </div>
