--- a/public/css/main.css
+++ b/public/css/main.css
@@ -96,6 +96,7 @@ a:active {
     font-size: 16px;
     border: none;
     cursor: crosshair;
+    background-image: linear-gradient(#ccc, #fff);
 }
 /* The container <div> - needed to position the dropdown content */
 
@@ -110,8 +111,8 @@ a:active {
     position: absolute;
     background-color: #fff;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    background-image: linear-gradient(#ccc, #fff);
 }
 /* Links inside the dropdown */
 
@@ -120,12 +121,14 @@ a:active {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    background-image: linear-gradient(#ccc, #fff);
 }
 /* Change color of dropdown links on hover */
 
 .dropdown-content a:hover {
     color: #FFF;
     background-color: #ddd
+    background-image: linear-gradient(#fff, #999);
 }
 /* Show the dropdown menu on hover */
 
@@ -136,7 +139,9 @@ a:active {
 
 .dropdown:hover .dropbtn {
     background-color: #fff;
+    background-image: linear-gradient(#fff, #ccc);
 }
+
 pre {
     white-space: pre-wrap;       /* Since CSS 2.1 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
