Working just need to fix some things

--- a/views/size.erb
+++ b/views/size.erb
@@ -7,7 +7,7 @@
     <input name="boardsize" type="radio" value="24" /> 24 x 24 <br />
     <input name="boardsize" type="radio" value="36" /> 36 x 36 <br />
     </br> 
-    <button type="submit" value="Submit">Submit</button></form> </div>
+    <button type="submit" autofocus value="Submit">Submit</button></form> </div>
     
 <div align="center" class="content">
 <img src="images/grid_12.png">
