--- a/game.erb
+++ b/game.erb
@@ -1,37 +1,33 @@
-
-        <body onload="removeElement(); changeText(); endGame();">  
-        <link rel="stylesheet" type="text/css" href="css/stop_watch.css">
-
   <div class="grid">
     <div class="image">    
-    <form method="post" action="game">
  <%max_num%>
     <% max_num = board.board.size.to_i - 1%>
      <center>
-            <font color="#000"><h3> Row coordinate</h3></font>
-                <input type="number" required name="row" autofocus placeholder="Row" min="0" max="<%= max_num %>">
-                 <font color="#000"><h3>Column coordinate</h3></font>
-                <input type="number"  required name="col" placeholder="Column" min="0" max="<%= max_num %>">
-                </br>
-                <div id="direction">
-                <font id="HV" color="#000"><h3>Horizontal or Vertical</h3></font>
-                <select id="pos" name="pos">
+     <form method="post" action="game" id="place_ship_stuff" >
+            <font color="#000"><h3> Row Coordinates</h3></font>
+                <input type="number" form="place_ship_stuff" required name="row" autofocus placeholder="Row" min="0" max="<%= max_num %>">
+             <font color="#000"><h3>Column Coordinates</h3></font>
+                <input type="number" form="place_ship_stuff" required name="col" placeholder="Column" min="0" max="<%= max_num %>">
+            </br>
+            <div id="direction">
+            <font id="HV" color="#000"><h3>Horizontal or Vertical</h3></font>
+                <select id="pos" name="pos" form="place_ship_stuff">
                     <option id="pos" value="horizontal">Horizontal</option>
                     <option id= "pos" value="v">Vertical</option>
                 </select>
                 
-                <input type='hidden' name='ship_num' value='<%=ship_num%>' id="value_s">
+                <input type='hidden' name='ship_num' value='<%=ship_num%>' id="value_s" form="place_ship_stuff">
                 <font color="#000"><h1><%=err%></h1></font> 
                 </div>
               
                 <br><br>
-                <button class=" button">Enter</button>
-         
 
-            </center>
-         
-   
-   </div>
+
+
+    <button class="button">Enter</button>
+</form>
+</center>  
+  </div>
            <div align="center" class="nav"> 
                        <h2>Player Board</h2>
            <table id="mytable">
@@ -57,6 +53,7 @@
                 <% if max_num == 35%>
                 <th><font color=#0000FF size=2> <%=k%> </font></th>
                 <% else %>
+
                 <th><font color=#0000FF><%=k%></font></th>
                 <%end%> 
                         <%end%>
@@ -87,7 +84,7 @@
                     <% else%>
                     <th><%=i%></th>
                     <%end%>
-                        <%v.each_with_index do |k, o|%>
+                        <%v.each_with_index do |k.to, o|%>
                <% if max_num == 35%>
                 <th><font color=#0000FF size=2> <%=k%> </font></th>
                 <% else %>
