--- a/new_game.erb
+++ b/new_game.erb
@@ -1,37 +1,34 @@
-
-        <body onload="removeElement(); changeText(); endGame();">  
-        <link rel="stylesheet" type="text/css" href="css/stop_watch.css">
+<link rel="stylesheet" type="text/css" href="css/stop_watch.css">
 
   <div class="grid">
     <div class="image">    
-    <form method="post" action="game">
  <%max_num%>
     <% max_num = board.board.size.to_i - 1%>
      <center>
-            <font color="#000"><h3> Row coordinate</h3></font>
-                <input type="number" required name="row" autofocus placeholder="Row" min="0" max="<%= max_num %>">
-                 <font color="#000"><h3>Column coordinate</h3></font>
-                <input type="number"  required name="col" placeholder="Column" min="0" max="<%= max_num %>">
-                </br>
-                <div id="direction">
-                <font id="HV" color="#000"><h3>Horizontal or Vertical</h3></font>
-                <select id="pos" name="pos">
+            <font color="#000"><h3> Row Coordinates</h3></font>
+                <input type="number" form="place_ship_stuff" required name="row" autofocus placeholder="Row" min="0" max="<%= max_num %>">
+             <font color="#000"><h3>Column Coordinates</h3></font>
+                <input type="number" form="place_ship_stuff" required name="col" placeholder="Column" min="0" max="<%= max_num %>">
+            </br>
+            <div id="direction">
+            <font id="HV" color="#000"><h3>Horizontal or Vertical</h3></font>
+                <select id="pos" name="pos" form="place_ship_stuff">
                     <option id="pos" value="horizontal">Horizontal</option>
                     <option id= "pos" value="v">Vertical</option>
                 </select>
                 
-                <input type='hidden' name='ship_num' value='<%=ship_num%>' id="value_s">
+                <input type='hidden' name='ship_num' value='<%=ship_num%>' id="value_s" form="place_ship_stuff">
                 <font color="#000"><h1><%=err%></h1></font> 
                 </div>
               
                 <br><br>
-                <button class=" button">Enter</button>
-         
 
-            </center>
-         
-   
-   </div>
+
+<form method="post" action="game" id="place_ship_stuff" >
+    <button class=" button">Enter</button>
+</form>
+</center>  
+  </div>
            <div align="center" class="nav"> 
                        <h2>Player Board</h2>
            <table id="mytable">
